# EditScore

./: pyproject.toml
assets/: edit_prompt.csv  fs_prompt.csv  get_edit_prompt.py
editscore/: __init__.py  ip2p.py
editscore/baseline_models/: InstructPix2Pix.py  __init__.py  baseline_abstract.py
editscore/mllm_tools/: __init__.py  gemini.py  mllm_abstract.py  openai.py
editscore/scoring/metric/: __init__.py  editscores.py  utils.py
editscore/scoring/prompt_tools/: __init__.py  prompt_context.py  prompt_instances.py
tests/: test_baseline_model.py  test_metric.py  test_openai_prompting.py
